--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 :root {
+  font-family: Poppins, "Times New Roman";
   --color-primary-purple: hsl(259, 100%, 65%);
   --color-primary-light: hsl(0, 100%, 67%);
   --color-neutral-white: hsl(0, 0%, 100%);
@@ -7,4 +8,92 @@
   --color-smokey-grey: hsl(0, 1%, 44%);
   --color-black-off: hsl(0, 0%, 8%);
   --font-size-main: 32px;
+}
+
+body {
+  background-color: var(--color-neutral-white-off);
+}
+.content {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  padding: 20px;
+  border-radius: 5px 5px 40px 5px;
+  background-color: var(--color-neutral-white);
+  width: 90%;
+  max-width: 1000px;
+}
+
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.form__fields {
+  display: flex;
+  flex-direction: row;
+
+}
+.form__submit::after {
+  top: 50%;
+  position: absolute;
+  content: '';
+  color: var(--color-light-grey);
+  border-bottom: 1px solid var(--color-light-grey);
+  width: 300px;
+  right: 40px;
+}
+
+
+.form__field {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 10px 10% 0;
+}
+
+
+.form__label {
+  font-size: 6px;
+  letter-spacing: 0.1rem;
+  color: var(--color-smokey-grey);
+}
+
+.form__input {
+  font-weight: 700;
+  border: 1px solid var(--color-light-grey);
+  border-radius: 5px;
+  width: 80px;
+  font-size: 32px;
+  margin: 5px 10px 5px 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.form__submit {
+  position: relative;
+  background-color: var(--color-black-off);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  box-shadow: none;
+  border: none;
+  align-self: end;
+  z-index: 2|;
+}
+
+.form__submit-icon {
+  width: 20px;
+}
+
+.result__p {
+  font-size: 32px;
+  margin: 0;
+}
+
+.result__number {
+  color: var(--color-primary-purple);
 }
